k8s/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-sec-kill
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-sec-kill
  template:
    metadata:
      labels:
        app: go-sec-kill
    spec:
      containers:
        - name: go-sec-kill
          image: smcroot/go-sec-kill
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi" # 请求1GB内存
              cpu: "500m" # 请求0.5 CPU
            limits:
              memory: "2Gi" # 限制最多使用2GB内存
              cpu: "1" # 限制最多使用1个CPU
